--- a/snapdragon/main.py.save.1
+++ b/snapdragon/main.py.save.1
@@ -150,7 +150,7 @@ def get_sonar():
 
     pulse_duration = pulse_end - pulse_start
 
-    distance = pulse_duration * 17150
+    distance = pulse_dur
     distance = round(distance, 2)
     return distance
 
